[gd_scene load_steps=2 format=3 uid="uid://shop001"]

[ext_resource type="Script" path="res://scripts/ShopView.gd" id="1_shopview"]

[node name="Shop" type="VBoxContainer"]
custom_minimum_size = Vector2(360, 0)
script = ExtResource("1_shopview")

[node name="ShopLabel" type="Label" parent="."]
layout_mode = 2
text = "상점"
theme_override_font_sizes/font_size = 16

[node name="ShopArea" type="HBoxContainer" parent="."]
layout_mode = 2
custom_minimum_size = Vector2(0, 140)
theme_override_constants/separation = 6

[node name="ButtonRow" type="HBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 8

[node name="BuyXPBtn" type="Button" parent="ButtonRow"]
layout_mode = 2
custom_minimum_size = Vector2(100, 36)
text = "XP 구매(4G)"

[node name="RerollBtn" type="Button" parent="ButtonRow"]
layout_mode = 2
custom_minimum_size = Vector2(90, 36)
text = "리롤(2G)"

[node name="CostInfoLabel" type="Label" parent="."]
layout_mode = 2
text = "1코스트:2~5 / 2코스트:6~8 / 3코스트:9~J / 4코스트:Q~K / 5코스트:A"
theme_override_font_sizes/font_size = 10
modulate = Color(0.7, 0.7, 0.7, 1)
autowrap_mode = 1
